2005-02-28  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/x_multiattrib.nw (multiattrib_callback_edited_name) 
	(multiattrib_callback_edited_value): Added code to check for changes
	in a slot attribute.

	* noweb/x_log.nw (x_log_open): Fixed to actually raise the dialog.

2005-02-27  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/i_callbacks.nw (i_callback_hierarchy_down_symbol): Changed
	to exclude embedded symbols from the hierarchy feature.
	
	* noweb/x_multiattrib.nw: Modified dialog to make it possible to
	set multi-line values at adding of attributes.
	Changed the behavior of the value column to stop edition when
	hitting the Enter key: for a new line, use Ctrl+Enter.

2005-02-26  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/x_multiattrib.nw (x_multiattrib_open): Fixed bug #153 (first 
	reported by Ales): added missing reset of toplevel's state at
	closing of dialog.
	Created a new CellRenderer for multi-line cells. It is used by the
	column 'value' of the attributes list.
	(multiattrib_callback_edited_name): Added a check on the future
	attribute's name: reject empty names and issue a message.

2005-02-25 Werner Hoch <werner.ho@gmx.de>

	* noweb/o_misc.nw: fixed autonumber_text

2005-02-24  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/x_multiattrib.nw: Removed unused variables and fixed a couple 
	of gcc warnings.
	
	* noweb/g_funcs.nw (hash_table_2_list): Replaced deprecated guile 
	functions with their equivalents in the new scm interface.

	* scripts/notangle_guile.in: New version.
	
	* configure.ac, scripts/Makefile.am: Adapted for renaming of script.
	
	* scripts/notangle_guile.scm.in: Renamed to notangle_guile.in.

2005-02-22  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/x_log.nw: Fixed to work with GTK 2.2.

2005-02-21  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/o_misc.nw (o_edit): Adapted for new dialog.

	* include/x_multiattrib.h: New file for the new x_multiattrib.nw.
	